// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/delimiter > should tokenize delimiter (0) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "--",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "delimiter",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "serialized": "--",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "delimiter",
    },
  ],
]
`;

exports[`integration:constructs/delimiter > should tokenize delimiter (1) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "--",
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "delimiter",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "serialized": "--",
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "delimiter",
    },
  ],
]
`;
